kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      name: python-app 
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: naresh240/python-app:latest
        ports:
        - containerPort: 5000
