kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  type: LoadBalancer
  selector:
    app: python-app  
  ports:
    - name: python-app
      port: 5000
      targetPort: 5000
      protocol: TCP
